--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -1,23 +1,32 @@
-name: Erlang CI
+name: Build, Test, Dialyze
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches:
+      - 'master'
+  push:
+    branches:
+      - 'master'
 
 jobs:
+  linux:
+    name: Test on OTP ${{ matrix.otp_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-  build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        otp_version: [21.2, 22, 23]
+        os: [ubuntu-latest]
 
     container:
-      image: erlang:21.2
+      image: erlang:${{ matrix.otp_version }}
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Compile
-      run: rebar3 compile
-    - name: Run tests
-      run: rebar3 do edoc,ct
+      - uses: actions/checkout@v2
+      - name: Compile
+        run: rebar3 compile
+      - name: CT tests
+        run: rebar3 do edoc,ct
+      - shell: bash
+        name: Dialyzer
+        run: rebar3 dialyzer
