ecount: fix dialyzer specs

--- a/rebar.config
+++ b/rebar.config
@@ -6,8 +6,7 @@
 ]}.
 
 {dialyzer, [
-    {warnings, [underspecs, overspecs, unmatched_returns]},
-    {get_warnings, true}
+    {warnings, [unknown]}
 ]}.
 
 {cover_enabled, true}.
