--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        otp_version: [21.2, 22, 23]
+        otp_version: [21.2, 22, 23, 24, 25, 26.1]
         os: [ubuntu-latest]
 
     container:
